PROYECTO_ALGORITMIA/AlgoritmiaParser.py
# Generated from Algoritmia.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AlgoritmiaParser ( Parser ):

    grammarFileName = "Algoritmia.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'<?>'", "'<w>'", "'if'", "'else'", "'while'", 
                     "'{'", "'}'", "'(:)'", "'<<'", "'8<'", "'<-'", "'#'", 
                     "<INVALID>", "<INVALID>", "'|:'", "':|'", "'('", "')'", 
                     "'['", "']'", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", 
                     "'/='", "'>'", "'<'", "'>='", "'<='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "REPROD", "AGREGADO", "CORTA", "ASSIGN", "SIZE", "NOTA", 
                      "PROCNAME", "LB", "RB", "LP", "RP", "LS", "RS", "SUM", 
                      "MIN", "MUL", "DIV", "MOD", "EQ", "NEQ", "GT", "LT", 
                      "GET", "LET", "VAR", "NUM", "STRING", "COMMENT", "WS" ]

    RULE_root = 0
    RULE_inss = 1
    RULE_ins = 2
    RULE_input_ = 3
    RULE_output_ = 4
    RULE_condition = 5
    RULE_while_ = 6
    RULE_reprod = 7
    RULE_agregado = 8
    RULE_corte = 9
    RULE_procDef = 10
    RULE_proc = 11
    RULE_assign = 12
    RULE_paramsId = 13
    RULE_paramsExpr = 14
    RULE_lista = 15
    RULE_consult = 16
    RULE_expr = 17
    RULE_siz = 18

    ruleNames =  [ "root", "inss", "ins", "input_", "output_", "condition", 
                   "while_", "reprod", "agregado", "corte", "procDef", "proc", 
                   "assign", "paramsId", "paramsExpr", "lista", "consult", 
                   "expr", "siz" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    REPROD=8
    AGREGADO=9
    CORTA=10
    ASSIGN=11
    SIZE=12
    NOTA=13
    PROCNAME=14
    LB=15
    RB=16
    LP=17
    RP=18
    LS=19
    RS=20
    SUM=21
    MIN=22
    MUL=23
    DIV=24
    MOD=25
    EQ=26
    NEQ=27
    GT=28
    LT=29
    GET=30
    LET=31
    VAR=32
    NUM=33
    STRING=34
    COMMENT=35
    WS=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(AlgoritmiaParser.EOF, 0)

        def procDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.ProcDefContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.ProcDefContext,i)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = AlgoritmiaParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 38
                self.procDef()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(AlgoritmiaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InssContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ins(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.InsContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.InsContext,i)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_inss

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInss" ):
                listener.enterInss(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInss" ):
                listener.exitInss(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInss" ):
                return visitor.visitInss(self)
            else:
                return visitor.visitChildren(self)




    def inss(self):

        localctx = AlgoritmiaParser.InssContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_inss)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4294985006) != 0):
                self.state = 46
                self.ins()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ConditionContext,0)


        def while_(self):
            return self.getTypedRuleContext(AlgoritmiaParser.While_Context,0)


        def input_(self):
            return self.getTypedRuleContext(AlgoritmiaParser.Input_Context,0)


        def output_(self):
            return self.getTypedRuleContext(AlgoritmiaParser.Output_Context,0)


        def proc(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ProcContext,0)


        def assign(self):
            return self.getTypedRuleContext(AlgoritmiaParser.AssignContext,0)


        def reprod(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ReprodContext,0)


        def agregado(self):
            return self.getTypedRuleContext(AlgoritmiaParser.AgregadoContext,0)


        def corte(self):
            return self.getTypedRuleContext(AlgoritmiaParser.CorteContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_ins

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIns" ):
                listener.enterIns(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIns" ):
                listener.exitIns(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIns" ):
                return visitor.visitIns(self)
            else:
                return visitor.visitChildren(self)




    def ins(self):

        localctx = AlgoritmiaParser.InsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ins)
        try:
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [3]:
                    self.state = 52
                    self.condition()
                    pass
                elif token in [5]:
                    self.state = 53
                    self.while_()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 56
                    self.input_()
                    pass
                elif token in [2]:
                    self.state = 57
                    self.output_()
                    pass
                elif token in [14]:
                    self.state = 58
                    self.proc()
                    pass
                elif token in [32]:
                    self.state = 59
                    self.assign()
                    pass
                elif token in [8]:
                    self.state = 60
                    self.reprod()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 65
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [32]:
                    self.state = 63
                    self.agregado()
                    pass
                elif token in [10]:
                    self.state = 64
                    self.corte()
                    pass
                else:
                    raise NoViableAltException(self)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Input_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(AlgoritmiaParser.VAR, 0)

        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_input_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInput_" ):
                listener.enterInput_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInput_" ):
                listener.exitInput_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInput_" ):
                return visitor.visitInput_(self)
            else:
                return visitor.visitChildren(self)




    def input_(self):

        localctx = AlgoritmiaParser.Input_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_input_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(AlgoritmiaParser.T__0)
            self.state = 70
            self.match(AlgoritmiaParser.VAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Output_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.ExprContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,i)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_output_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutput_" ):
                listener.enterOutput_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutput_" ):
                listener.exitOutput_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOutput_" ):
                return visitor.visitOutput_(self)
            else:
                return visitor.visitChildren(self)




    def output_(self):

        localctx = AlgoritmiaParser.Output_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_output_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(AlgoritmiaParser.T__1)
            self.state = 74 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 73
                    self.expr(0)

                else:
                    raise NoViableAltException(self)
                self.state = 76 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,0)


        def LB(self, i:int=None):
            if i is None:
                return self.getTokens(AlgoritmiaParser.LB)
            else:
                return self.getToken(AlgoritmiaParser.LB, i)

        def inss(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.InssContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.InssContext,i)


        def RB(self, i:int=None):
            if i is None:
                return self.getTokens(AlgoritmiaParser.RB)
            else:
                return self.getToken(AlgoritmiaParser.RB, i)

        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = AlgoritmiaParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(AlgoritmiaParser.T__2)
            self.state = 79
            self.expr(0)
            self.state = 80
            self.match(AlgoritmiaParser.LB)
            self.state = 81
            self.inss()
            self.state = 82
            self.match(AlgoritmiaParser.RB)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 83
                self.match(AlgoritmiaParser.T__3)
                self.state = 84
                self.match(AlgoritmiaParser.LB)
                self.state = 85
                self.inss()
                self.state = 86
                self.match(AlgoritmiaParser.RB)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,0)


        def LB(self):
            return self.getToken(AlgoritmiaParser.LB, 0)

        def inss(self):
            return self.getTypedRuleContext(AlgoritmiaParser.InssContext,0)


        def RB(self):
            return self.getToken(AlgoritmiaParser.RB, 0)

        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_while_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_" ):
                listener.enterWhile_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_" ):
                listener.exitWhile_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_" ):
                return visitor.visitWhile_(self)
            else:
                return visitor.visitChildren(self)




    def while_(self):

        localctx = AlgoritmiaParser.While_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_while_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(AlgoritmiaParser.T__4)
            self.state = 91
            self.expr(0)
            self.state = 92
            self.match(AlgoritmiaParser.LB)
            self.state = 93
            self.inss()
            self.state = 94
            self.match(AlgoritmiaParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReprodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REPROD(self):
            return self.getToken(AlgoritmiaParser.REPROD, 0)

        def expr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_reprod

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReprod" ):
                listener.enterReprod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReprod" ):
                listener.exitReprod(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReprod" ):
                return visitor.visitReprod(self)
            else:
                return visitor.visitChildren(self)




    def reprod(self):

        localctx = AlgoritmiaParser.ReprodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_reprod)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(AlgoritmiaParser.REPROD)
            self.state = 97
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AgregadoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(AlgoritmiaParser.VAR, 0)

        def AGREGADO(self):
            return self.getToken(AlgoritmiaParser.AGREGADO, 0)

        def expr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_agregado

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAgregado" ):
                listener.enterAgregado(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAgregado" ):
                listener.exitAgregado(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAgregado" ):
                return visitor.visitAgregado(self)
            else:
                return visitor.visitChildren(self)




    def agregado(self):

        localctx = AlgoritmiaParser.AgregadoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_agregado)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(AlgoritmiaParser.VAR)
            self.state = 100
            self.match(AlgoritmiaParser.AGREGADO)
            self.state = 101
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CorteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CORTA(self):
            return self.getToken(AlgoritmiaParser.CORTA, 0)

        def VAR(self):
            return self.getToken(AlgoritmiaParser.VAR, 0)

        def LS(self):
            return self.getToken(AlgoritmiaParser.LS, 0)

        def expr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,0)


        def RS(self):
            return self.getToken(AlgoritmiaParser.RS, 0)

        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_corte

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCorte" ):
                listener.enterCorte(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCorte" ):
                listener.exitCorte(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCorte" ):
                return visitor.visitCorte(self)
            else:
                return visitor.visitChildren(self)




    def corte(self):

        localctx = AlgoritmiaParser.CorteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_corte)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(AlgoritmiaParser.CORTA)
            self.state = 104
            self.match(AlgoritmiaParser.VAR)
            self.state = 105
            self.match(AlgoritmiaParser.LS)
            self.state = 106
            self.expr(0)
            self.state = 107
            self.match(AlgoritmiaParser.RS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCNAME(self):
            return self.getToken(AlgoritmiaParser.PROCNAME, 0)

        def paramsId(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ParamsIdContext,0)


        def LB(self):
            return self.getToken(AlgoritmiaParser.LB, 0)

        def inss(self):
            return self.getTypedRuleContext(AlgoritmiaParser.InssContext,0)


        def RB(self):
            return self.getToken(AlgoritmiaParser.RB, 0)

        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_procDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcDef" ):
                listener.enterProcDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcDef" ):
                listener.exitProcDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcDef" ):
                return visitor.visitProcDef(self)
            else:
                return visitor.visitChildren(self)




    def procDef(self):

        localctx = AlgoritmiaParser.ProcDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_procDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(AlgoritmiaParser.PROCNAME)
            self.state = 110
            self.paramsId()
            self.state = 111
            self.match(AlgoritmiaParser.LB)
            self.state = 112
            self.inss()
            self.state = 113
            self.match(AlgoritmiaParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCNAME(self):
            return self.getToken(AlgoritmiaParser.PROCNAME, 0)

        def paramsExpr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ParamsExprContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.ExprContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,i)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_proc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProc" ):
                listener.enterProc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProc" ):
                listener.exitProc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProc" ):
                return visitor.visitProc(self)
            else:
                return visitor.visitChildren(self)




    def proc(self):

        localctx = AlgoritmiaParser.ProcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_proc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(AlgoritmiaParser.PROCNAME)
            self.state = 116
            self.paramsExpr()
            self.state = 120
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 117
                    self.expr(0) 
                self.state = 122
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(AlgoritmiaParser.VAR, 0)

        def ASSIGN(self):
            return self.getToken(AlgoritmiaParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = AlgoritmiaParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(AlgoritmiaParser.VAR)
            self.state = 124
            self.match(AlgoritmiaParser.ASSIGN)
            self.state = 125
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsIdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(AlgoritmiaParser.VAR)
            else:
                return self.getToken(AlgoritmiaParser.VAR, i)

        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_paramsId

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamsId" ):
                listener.enterParamsId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamsId" ):
                listener.exitParamsId(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamsId" ):
                return visitor.visitParamsId(self)
            else:
                return visitor.visitChildren(self)




    def paramsId(self):

        localctx = AlgoritmiaParser.ParamsIdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_paramsId)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==32:
                self.state = 127
                self.match(AlgoritmiaParser.VAR)
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)
